Tue Oct 01 18:02:13 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c, src/mpwrap.[ch]: fix subtle copy on write error with
	  nested for loops with a floating point "by"
	
	* src/eval.[ch]: fix a nasty side effect of erroneously telling gcc
	  that a function is pure

	* gtkextra/*.c: fix some warnings

Wed Jun 26 14:33:09 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/funclibhelper.cP: implement subsecond precision
	  in wait (approx 10ms) by simply passing in a noninteger number.

Tue Jun 25 16:11:28 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: A few updates, clarify how escapes in strings
	  work, add lots of hyperlinks when mentioning functions.

Tue Jun 25 14:57:03 2013  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.17

Tue Jun 25 14:48:55 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/gtkplot.c: fix a very nasty infinite loop with a memory leak
	  on very very large zoom due to a numerical issue.

Fri Jun 14 15:19:19 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/gtkplot3d.c: fix placement of labels.

	* src/graphing.c: make surface plot slightly smaller so that it fits
	  on screen.

Fri Jun 14 12:01:24 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix precision when the starting limit is 0 or much
	  nearrer zero than the ending limit.  On left/right keys rotate 3d
	  plot, and on all arrow keys move about line plots

Fri Jun 14 10:48:41 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: finish updating GtkExtra to 3.0.5

Fri Jun 14 10:04:20 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Properly report errors from saving files

Thu Jun 13 16:42:42 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: copied lots of the files from 3.0.5, only gtkplot3d,
	  gtkplotdt and gtkplotsurface remain unupdated

	* gtkextra/gtkplotps.c: updated to the 3.0.5 version part way, the
	  new one is still broken so the new geometry stuff is not there (it