@@ -1,3 +1,7 @@
+Tue Oct 01 18:16:21 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* gtkextra/*.c: fix some more warnings include a leak
+
 Tue Oct 01 18:02:13 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/eval.c, src/mpwrap.[ch]: fix subtle copy on write error with
